src/parser/aspcore2_parser.output
Terminals which are not used

   ERROR
   NEWLINE


State 40 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 HEAD_SEPARATOR: VEL

    2 program: SQL_DIALECT sql
    3        | rules
    4        | error

    5 rules: rule
    6      | rules rule

    7 rule: simple_rule
    8     | directive

    9 simple_rule: head DOT
   10            | head CONS DOT
   11            | head CONS body DOT
   12            | CONS body DOT
   13            | WCONS body DOT weight_at_levels
   14            | query

   15 head: disjunction
   16     | choice_atom

   17 body: conjunction

   18 weight_at_levels: SQUARE_OPEN term SQUARE_CLOSE
   19                 | SQUARE_OPEN term levels_and_terms SQUARE_CLOSE

   20 levels_and_terms: AT term
   21                 | AT term COMMA terms
   22                 | COMMA terms

   23 disjunction: classic_literal
   24            | ext_atom
   25            | disjunction HEAD_SEPARATOR classic_literal
   26            | existential_atom
   27            | disjunction HEAD_SEPARATOR existential_atom

   28 conjunction: naf_literal_aggregate
   29            | conjunction COMMA naf_literal_aggregate

   30 choice_atom: lower_guard CURLY_OPEN choice_elements CURLY_CLOSE upper_guard
   31            | lower_guard CURLY_OPEN choice_elements CURLY_CLOSE
   32            | CURLY_OPEN choice_elements CURLY_CLOSE
   33            | CURLY_OPEN choice_elements CURLY_CLOSE upper_guard

   34 lower_guard: term binop

   35 upper_guard: binop term

   36 choice_elements: choice_elements SEMICOLON choice_element
   37                | choice_element

   38 choice_element: choice_element_atom
   39               | choice_element_atom COLON choice_elements_literals

   40 choice_element_atom: atom

   41 choice_elements_literals: naf_literal
   42                         | choice_elements_literals COMMA naf_literal

   43 naf_literals: naf_literal
   44             | naf_literals COMMA naf_literal

   45 naf_literal: classic_literal
   46            | NAF classic_literal
   47            | builtin_or_list
   48            | ext_atom
   49            | NAF ext_atom

   50 naf_literal_aggregate: naf_literal
   51                      | aggregate_atom
   52                      | NAF aggregate_atom

   53 existential_atom: EXISTS vars atom

   54 classic_literal: atom
   55                | DASH atom

   56 atom: identifier
   57     | identifier PARAM_OPEN terms PARAM_CLOSE
   58     | identifier PARAM_OPEN PARAM_CLOSE

   59 ext_atom: AMPERSAND identifier PARAM_OPEN terms ext_semicol named_parameters ext_semicol terms PARAM_CLOSE
   60         | AMPERSAND identifier PARAM_OPEN ext_semicol named_parameters ext_semicol terms PARAM_CLOSE

   61 ext_semicol: SEMICOLON

   62 named_parameters: /* empty */
   63                 | namedParameter
   64                 | named_parameters COMMA namedParameter

   65 namedParameter: term EQUAL term

   66 terms: term
   67      | terms COMMA term

   68 basic_terms: basic_term
   69            | basic_terms COMMA basic_term

   70 builtin_or_list: builtin_atom
   71                | builtin_or_list OR builtin_atom

   72 builtin_atom: term binop term

   73 compareop: EQUAL
   74          | UNEQUAL

   75 binop: compareop
   76      | leftwardop
   77      | rightwardop

   78 arithop1: PLUS
   79         | DASH

   80 arithop2: TIMES
   81         | SLASH
   82         | BACK_SLASH

   83 term_: ANON_VAR
   84      | identifier PARAM_OPEN terms PARAM_CLOSE
   85      | NUMBER DDOT NUMBER
   86      | DASH term
   87      | list_term

   88 term__: identifier
   89       | NUMBER
   90       | PARAM_OPEN term PARAM_CLOSE

   91 term: term_
   92     | expr

   93 expr: factor
   94     | expr arithop1 factor

   95 factor: term__
   96       | factor arithop2 term__

   97 basic_term: ground_term
   98           | variable_term
   99           | functional_term
  100           | ID

  101 ground_term: SYMBOLIC_CONSTANT
  102            | STRING
  103            | NUMBER
  104            | DASH NUMBER

  105 variable_term: VARIABLE
  106              | ANON_VAR

  107 functional_term: identifier PARAM_OPEN terms PARAM_CLOSE

  108 list_term: SQUARE_OPEN SQUARE_CLOSE
  109          | SQUARE_OPEN list_terms_term SQUARE_CLOSE

  110 list_terms_term: terms
  111                | list_head_tail_term

  112 list_head_tail_term: term VEL list_tail_term

  113 list_tail_term: VARIABLE
  114               | list_term

  115 vars: VARIABLE
  116     | vars COMMA VARIABLE

  117 identifier: SYMBOLIC_CONSTANT
  118           | STRING
  119           | VARIABLE

  120 directive: DIRECTIVE_NAME DIRECTIVE_VALUE

  121 query: atom QUERY_MARK

  122 lower_guard_compare_aggregate: term compareop

  123 upper_guard_compare_aggregate: compareop term

  124 compare_aggregate: lower_guard_compare_aggregate aggregate
  125                  | aggregate upper_guard_compare_aggregate

  126 lower_guard_leftward_left_aggregate: term leftwardop

  127 leftward_left_aggregate: lower_guard_leftward_left_aggregate aggregate

  128 left_aggregate: leftward_left_aggregate
  129               | rightward_left_aggregate

  130 lower_guard_rightward_left_aggregate: term rightwardop

  131 rightward_left_aggregate: lower_guard_rightward_left_aggregate aggregate

  132 upper_guard_leftward_right_aggregate: leftwardop term

  133 upper_guard_rightward_right_aggregate: rightwardop term

  134 right_aggregate: aggregate upper_guard_leftward_right_aggregate
  135                | aggregate upper_guard_rightward_right_aggregate

  136 aggregate_atom: left_aggregate
  137               | right_aggregate
  138               | compare_aggregate
  139               | leftward_left_aggregate upper_guard_leftward_right_aggregate
  140               | rightward_left_aggregate upper_guard_rightward_right_aggregate
  141               | multi_assign_aggregate

  142 multi_assign_aggregate: multi_assign_guard multi_aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  143                       | multi_assign_guard multi_aggregate_function CURLY_OPEN CURLY_CLOSE

  144 multi_assign_guard: VARIABLE COMMA VARIABLE EQUAL
  145                   | multi_assign_guard VARIABLE COMMA

  146 leftwardop: LESS
  147           | LESS_OR_EQ

  148 rightwardop: GREATER
  149            | GREATER_OR_EQ

  150 aggregate: aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  151          | aggregate_function CURLY_OPEN CURLY_CLOSE
  152          | multi_aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  153          | multi_aggregate_function CURLY_OPEN CURLY_CLOSE

  154 multi_aggregate_function: AGGR_MULTI aggregate_function_list SQUARE_CLOSE

  155 aggregate_function_list: aggregate_function_item
  156                        | aggregate_function_list COMMA aggregate_function_item

  157 aggregate_function_item: AGGR_COUNT
  158                        | AGGR_MAX
  159                        | AGGR_MIN
  160                        | AGGR_SUM
  161                        | AGGR_AVG

  162 aggregate_elements: aggregate_elements SEMICOLON aggregate_element
  163                   | aggregate_element

  164 aggregate_element: basic_terms COLON naf_literals
  165                  | basic_terms agg_group_semicol basic_terms COLON naf_literals

  166 agg_group_semicol: SEMICOLON

  167 aggregate_function: AGGR_COUNT
  168                   | AGGR_MAX
  169                   | AGGR_MIN
  170                   | AGGR_SUM
  171                   | AGGR_AVG

  172 sql: sql_query
  173    | SQL_COPY PARAM_OPEN sql_query PARAM_CLOSE sql_copy_to sql_copy_params

  174 sql_query: sql_select select from opt_where opt_groupby opt_orderby opt_limit

  175 sql_copy_to: SQL_TO STRING

  176 sql_copy_params: PARAM_OPEN named_parameters PARAM_CLOSE

  177 sql_select: SQL_SELECT

  178 select: select_list

  179 select_list: TIMES
  180            | select_items

  181 select_items: select_item
  182             | select_items COMMA select_item

  183 select_item: value_expr opt_alias

  184 from: SQL_FROM from_list

  185 from_list: from_item
  186          | from_list COMMA from_item

  187 from_item: external_table opt_alias
  188          | table_ref opt_alias
  189          | PARAM_OPEN sql PARAM_CLOSE opt_alias

  190 external_table: AMPERSAND identifier PARAM_OPEN terms ext_semicol named_parameters PARAM_CLOSE
  191               | STRING

  192 table_ref: SYMBOLIC_CONSTANT
  193          | VARIABLE

  194 opt_alias: /* empty */
  195          | SQL_AS alias_name

  196 alias_name: SYMBOLIC_CONSTANT
  197           | VARIABLE
  198           | SQL_COUNT
  199           | SQL_AVG
  200           | SQL_MAX
  201           | SQL_MIN
  202           | SQL_SUM

  203 opt_where: /* empty */
  204          | SQL_WHERE search_condition

  205 search_condition: predicate
  206                 | search_condition AND predicate
  207                 | search_condition OR predicate

  208 predicate: predicate_value_expr binop value_expr

  209 predicate_value_expr: value_expr

  210 opt_groupby: /* empty */
  211            | SQL_GROUP SQL_BY group_list

  212 group_list: value_expr
  213           | group_list COMMA value_expr

  214 opt_orderby: /* empty */
  215            | SQL_ORDER SQL_BY order_list

  216 order_list: order_col
  217           | order_list COMMA order_col

  218 order_col: order_col_name modifier_opt

  219 order_col_name: qualified_name
  220               | SQL_SUM
  221               | SQL_MIN
  222               | SQL_MAX
  223               | SQL_AVG
  224               | SQL_COUNT

  225 modifier_opt: /* empty */
  226             | SQL_ASC
  227             | SQL_DESC

  228 opt_limit: /* empty */
  229          | SQL_LIMIT NUMBER

  230 value_expr: value_term
  231           | value_expr PLUS value_term
  232           | value_expr DASH value_term
  233           | value_expr TIMES value_term
  234           | value_expr SLASH value_term

  235 value_term: value_primary

  236 value_primary: NUMBER
  237              | STRING
  238              | qualified_name
  239              | PARAM_OPEN value_expr PARAM_CLOSE
  240              | aggregate_func PARAM_OPEN aggregate_arg PARAM_CLOSE

  241 aggregate_arg: value_expr
  242              | TIMES

  243 qualified_name: SYMBOLIC_CONSTANT
  244               | VARIABLE
  245               | SYMBOLIC_CONSTANT DOT SYMBOLIC_CONSTANT
  246               | VARIABLE DOT SYMBOLIC_CONSTANT
  247               | VARIABLE DOT VARIABLE
  248               | SYMBOLIC_CONSTANT DOT VARIABLE

  249 aggregate_func: SQL_SUM
  250               | SQL_MIN
  251               | SQL_MAX
  252               | SQL_AVG
  253               | SQL_COUNT


Terminals, with rules where they appear

$end (0) 0
error (256) 4
SYMBOLIC_CONSTANT (258) 101 117 192 196 243 245 246 248
NUMBER (259) 85 89 103 104 229 236
VARIABLE (260) 105 113 115 116 119 144 145 193 197 244 246 247 248
STRING (261) 102 118 175 191 237
DIRECTIVE_NAME (262) 120
DIRECTIVE_VALUE (263) 120
AGGR_COUNT (264) 157 167
AGGR_MAX (265) 158 168
AGGR_MIN (266) 159 169
AGGR_SUM (267) 160 170
AGGR_AVG (268) 161 171
AGGR_MULTI (269) 154
ID (270) 100
ERROR (271)
NEWLINE (272)
DOT (273) 9 10 11 12 13 245 246 247 248
DDOT (274) 85
SEMICOLON (275) 36 61 162 166
COLON (276) 39 164 165
CONS (277) 10 11 12
QUERY_MARK (278) 121
PLUS (279) 78 231
TIMES (280) 80 179 233 242
SLASH (281) 81 234
BACK_SLASH (282) 82
ANON_VAR (283) 83 106
PARAM_OPEN (284) 57 58 59 60 84 90 107 173 176 189 190 239 240
PARAM_CLOSE (285) 57 58 59 60 84 90 107 173 176 189 190 239 240
SQUARE_OPEN (286) 18 19 108 109
SQUARE_CLOSE (287) 18 19 108 109 154
CURLY_OPEN (288) 30 31 32 33 142 143 150 151 152 153
CURLY_CLOSE (289) 30 31 32 33 142 143 150 151 152 153
EQUAL (290) 65 73 144
UNEQUAL (291) 74
LESS (292) 146
GREATER (293) 148
LESS_OR_EQ (294) 147
GREATER_OR_EQ (295) 149
OR (296) 71 207
AND (297) 206
DASH (298) 55 79 86 104 232
COMMA (299) 21 22 29 42 44 64 67 69 116 144 145 156 182 186 213 217
NAF (300) 46 49 52
AT (301) 20 21
WCONS (302) 13
AMPERSAND (303) 59 60 190
VEL (304) 1 112
EXISTS (305) 53
SQL_SELECT (306) 177
SQL_FROM (307) 184
SQL_WHERE (308) 204
SQL_GROUP (309) 211
SQL_BY (310) 211 215
SQL_AS (311) 195
SQL_COPY (312) 173
SQL_TO (313) 175
SQL_ORDER (314) 215
SQL_ASC (315) 226
SQL_DESC (316) 227
SQL_LIMIT (317) 229
SQL_SUM (318) 202 220 249
SQL_MIN (319) 201 221 250
SQL_MAX (320) 200 222 251
SQL_AVG (321) 199 223 252
SQL_COUNT (322) 198 224 253
SQL_DIALECT (323) 2


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
HEAD_SEPARATOR (70)
    on left: 1, on right: 25 27
program (71)
    on left: 2 3 4, on right: 0
rules (72)
    on left: 5 6, on right: 3 6
rule (73)
    on left: 7 8, on right: 5 6
simple_rule (74)
    on left: 9 10 11 12 13 14, on right: 7
head (75)
    on left: 15 16, on right: 9 10 11
body (76)
    on left: 17, on right: 11 12 13
weight_at_levels (77)
    on left: 18 19, on right: 13
levels_and_terms (78)
    on left: 20 21 22, on right: 19
disjunction (79)
    on left: 23 24 25 26 27, on right: 15 25 27
conjunction (80)
    on left: 28 29, on right: 17 29
choice_atom (81)
    on left: 30 31 32 33, on right: 16
lower_guard (82)
    on left: 34, on right: 30 31
upper_guard (83)
    on left: 35, on right: 30 33
choice_elements (84)
    on left: 36 37, on right: 30 31 32 33 36
choice_element (85)
    on left: 38 39, on right: 36 37
choice_element_atom (86)
    on left: 40, on right: 38 39
choice_elements_literals (87)
    on left: 41 42, on right: 39 42
naf_literals (88)
    on left: 43 44, on right: 44 164 165
naf_literal (89)
    on left: 45 46 47 48 49, on right: 41 42 43 44 50
naf_literal_aggregate (90)
    on left: 50 51 52, on right: 28 29
existential_atom (91)
    on left: 53, on right: 26 27
classic_literal (92)
    on left: 54 55, on right: 23 25 45 46
atom (93)
    on left: 56 57 58, on right: 40 53 54 55 121
ext_atom (94)
    on left: 59 60, on right: 24 48 49
ext_semicol (95)
    on left: 61, on right: 59 60 190
named_parameters (96)
    on left: 62 63 64, on right: 59 60 64 176 190
namedParameter (97)
    on left: 65, on right: 63 64
terms (98)
    on left: 66 67, on right: 21 22 57 59 60 67 84 107 110 190
basic_terms (99)
    on left: 68 69, on right: 69 164 165
builtin_or_list (100)
    on left: 70 71, on right: 47 71
builtin_atom (101)
    on left: 72, on right: 70 71
compareop (102)
    on left: 73 74, on right: 75 122 123
binop (103)
    on left: 75 76 77, on right: 34 35 72 208
arithop1 (104)
    on left: 78 79, on right: 94
arithop2 (105)
    on left: 80 81 82, on right: 96
term_ (106)
    on left: 83 84 85 86 87, on right: 91
term__ (107)
    on left: 88 89 90, on right: 95 96
term (108)
    on left: 91 92, on right: 18 19 20 21 34 35 65 66 67 72 86 90 112
    122 123 126 130 132 133
expr (109)
    on left: 93 94, on right: 92 94
factor (110)
    on left: 95 96, on right: 93 94 96
basic_term (111)
    on left: 97 98 99 100, on right: 68 69
ground_term (112)
    on left: 101 102 103 104, on right: 97
variable_term (113)
    on left: 105 106, on right: 98
functional_term (114)
    on left: 107, on right: 99
list_term (115)
    on left: 108 109, on right: 87 114
list_terms_term (116)
    on left: 110 111, on right: 109
list_head_tail_term (117)
    on left: 112, on right: 111
list_tail_term (118)
    on left: 113 114, on right: 112
vars (119)
    on left: 115 116, on right: 53 116
identifier (120)
    on left: 117 118 119, on right: 56 57 58 59 60 84 88 107 190
directive (121)
    on left: 120, on right: 8
query (122)
    on left: 121, on right: 14
lower_guard_compare_aggregate (123)
    on left: 122, on right: 124
upper_guard_compare_aggregate (124)
    on left: 123, on right: 125
compare_aggregate (125)
    on left: 124 125, on right: 138
lower_guard_leftward_left_aggregate (126)
    on left: 126, on right: 127
leftward_left_aggregate (127)
    on left: 127, on right: 128 139
left_aggregate (128)
    on left: 128 129, on right: 136
lower_guard_rightward_left_aggregate (129)
    on left: 130, on right: 131
rightward_left_aggregate (130)
    on left: 131, on right: 129 140
upper_guard_leftward_right_aggregate (131)
    on left: 132, on right: 134 139
upper_guard_rightward_right_aggregate (132)
    on left: 133, on right: 135 140
right_aggregate (133)
    on left: 134 135, on right: 137
aggregate_atom (134)
    on left: 136 137 138 139 140 141, on right: 51 52
multi_assign_aggregate (135)
    on left: 142 143, on right: 141
multi_assign_guard (136)
    on left: 144 145, on right: 142 143 145
leftwardop (137)
    on left: 146 147, on right: 76 126 132
rightwardop (138)
    on left: 148 149, on right: 77 130 133
aggregate (139)
    on left: 150 151 152 153, on right: 124 125 127 131 134 135
multi_aggregate_function (140)
    on left: 154, on right: 142 143 152 153
aggregate_function_list (141)
    on left: 155 156, on right: 154 156
aggregate_function_item (142)
    on left: 157 158 159 160 161, on right: 155 156
aggregate_elements (143)
    on left: 162 163, on right: 142 150 152 162
aggregate_element (144)
    on left: 164 165, on right: 162 163
agg_group_semicol (145)
    on left: 166, on right: 165
aggregate_function (146)
    on left: 167 168 169 170 171, on right: 150 151
sql (147)
    on left: 172 173, on right: 2 189
sql_query (148)
    on left: 174, on right: 172 173
sql_copy_to (149)
    on left: 175, on right: 173
sql_copy_params (150)
    on left: 176, on right: 173
sql_select (151)
    on left: 177, on right: 174
select (152)
    on left: 178, on right: 174
select_list (153)
    on left: 179 180, on right: 178
select_items (154)
    on left: 181 182, on right: 180 182
select_item (155)
    on left: 183, on right: 181 182
from (156)
    on left: 184, on right: 174
from_list (157)
    on left: 185 186, on right: 184 186
from_item (158)
    on left: 187 188 189, on right: 185 186
external_table (159)
    on left: 190 191, on right: 187
table_ref (160)
    on left: 192 193, on right: 188
opt_alias (161)
    on left: 194 195, on right: 183 187 188 189
alias_name (162)
    on left: 196 197 198 199 200 201 202, on right: 195
opt_where (163)
    on left: 203 204, on right: 174
search_condition (164)
    on left: 205 206 207, on right: 204 206 207
predicate (165)
    on left: 208, on right: 205 206 207
predicate_value_expr (166)
    on left: 209, on right: 208
opt_groupby (167)
    on left: 210 211, on right: 174
group_list (168)
    on left: 212 213, on right: 211 213
opt_orderby (169)
    on left: 214 215, on right: 174
order_list (170)
    on left: 216 217, on right: 215 217
order_col (171)
    on left: 218, on right: 216 217
order_col_name (172)
    on left: 219 220 221 222 223 224, on right: 218
modifier_opt (173)
    on left: 225 226 227, on right: 218
opt_limit (174)
    on left: 228 229, on right: 174
value_expr (175)
    on left: 230 231 232 233 234, on right: 183 208 209 212 213 231
    232 233 234 239 241
value_term (176)
    on left: 235, on right: 230 231 232 233 234
value_primary (177)
    on left: 236 237 238 239 240, on right: 235
aggregate_arg (178)
    on left: 241 242, on right: 240
qualified_name (179)
    on left: 243 244 245 246 247 248, on right: 219 238
aggregate_func (180)
    on left: 249 250 251 252 253, on right: 240


state 0

    0 $accept: . program $end
    2 program: . SQL_DIALECT sql
    3        | . rules
    4        | . error
    5 rules: . rule
    6      | . rules rule
    7 rule: . simple_rule
    8     | . directive
    9 simple_rule: . head DOT
   10            | . head CONS DOT
   11            | . head CONS body DOT
   12            | . CONS body DOT
   13            | . WCONS body DOT weight_at_levels
   14            | . query
   15 head: . disjunction
   16     | . choice_atom
   23 disjunction: . classic_literal
   24            | . ext_atom
   25            | . disjunction HEAD_SEPARATOR classic_literal
   26            | . existential_atom
   27            | . disjunction HEAD_SEPARATOR existential_atom
   30 choice_atom: . lower_guard CURLY_OPEN choice_elements CURLY_CLOSE upper_guard
   31            | . lower_guard CURLY_OPEN choice_elements CURLY_CLOSE
   32            | . CURLY_OPEN choice_elements CURLY_CLOSE
   33            | . CURLY_OPEN choice_elements CURLY_CLOSE upper_guard
   34 lower_guard: . term binop
   53 existential_atom: . EXISTS vars atom
   54 classic_literal: . atom
   55                | . DASH atom
   56 atom: . identifier
   57     | . identifier PARAM_OPEN terms PARAM_CLOSE
   58     | . identifier PARAM_OPEN PARAM_CLOSE
   59 ext_atom: . AMPERSAND identifier PARAM_OPEN terms ext_semicol named_parameters ext_semicol terms PARAM_CLOSE
   60         | . AMPERSAND identifier PARAM_OPEN ext_semicol named_parameters ext_semicol terms PARAM_CLOSE
   83 term_: . ANON_VAR
   84      | . identifier PARAM_OPEN terms PARAM_CLOSE
   85      | . NUMBER DDOT NUMBER
   86      | . DASH term
   87      | . list_term
   88 term__: . identifier
   89       | . NUMBER
   90       | . PARAM_OPEN term PARAM_CLOSE
   91 term: . term_
   92     | . expr
   93 expr: . factor
   94     | . expr arithop1 factor
   95 factor: . term__
   96       | . factor arithop2 term__
  108 list_term: . SQUARE_OPEN SQUARE_CLOSE
  109          | . SQUARE_OPEN list_terms_term SQUARE_CLOSE
  117 identifier: . SYMBOLIC_CONSTANT
  118           | . STRING
  119           | . VARIABLE
  120 directive: . DIRECTIVE_NAME DIRECTIVE_VALUE
  121 query: . atom QUERY_MARK

    error              shift, and go to state 1
    SYMBOLIC_CONSTANT  shift, and go to state 2
    NUMBER             shift, and go to state 3
    VARIABLE           shift, and go to state 4
    STRING             shift, and go to state 5
    DIRECTIVE_NAME     shift, and go to state 6
    CONS               shift, and go to state 7
    ANON_VAR           shift, and go to state 8
    PARAM_OPEN         shift, and go to state 9
    SQUARE_OPEN        shift, and go to state 10
    CURLY_OPEN         shift, and go to state 11
    DASH               shift, and go to state 12
    WCONS              shift, and go to state 13
    AMPERSAND          shift, and go to state 14
    EXISTS             shift, and go to state 15
    SQL_DIALECT        shift, and go to state 16

    program           go to state 17
    rules             go to state 18
    rule              go to state 19
    simple_rule       go to state 20
    head              go to state 21
    disjunction       go to state 22
    choice_atom       go to state 23
    lower_guard       go to state 24
    existential_atom  go to state 25
    classic_literal   go to state 26
    atom              go to state 27
    ext_atom          go to state 28
    term_             go to state 29
    term__            go to state 30
    term              go to state 31
    expr              go to state 32
    factor            go to state 33
    list_term         go to state 34
    identifier        go to state 35
    directive         go to state 36
    query             go to state 37


state 1

    4 program: error .

    $default  reduce using rule 4 (program)


state 2

  117 identifier: SYMBOLIC_CONSTANT .

    $default  reduce using rule 117 (identifier)


state 3

   85 term_: NUMBER . DDOT NUMBER
   89 term__: NUMBER .  [DOT, SEMICOLON, CONS, PLUS, TIMES, SLASH, BACK_SLASH, PARAM_CLOSE, SQUARE_CLOSE, CURLY_CLOSE, EQUAL, UNEQUAL, LESS, GREATER, LESS_OR_EQ, GREATER_OR_EQ, OR, DASH, COMMA, AT, VEL]

    DDOT  shift, and go to state 38

    $default  reduce using rule 89 (term__)


state 4

  119 identifier: VARIABLE .

    $default  reduce using rule 119 (identifier)


state 5

  118 identifier: STRING .

    $default  reduce using rule 118 (identifier)


state 6

  120 directive: DIRECTIVE_NAME . DIRECTIVE_VALUE

    DIRECTIVE_VALUE  shift, and go to state 39


state 7

   12 simple_rule: CONS . body DOT
   17 body: . conjunction
   28 conjunction: . naf_literal_aggregate
   29            | . conjunction COMMA naf_literal_aggregate
   45 naf_literal: . classic_literal
   46            | . NAF classic_literal
   47            | . builtin_or_list
   48            | . ext_atom
   49            | . NAF ext_atom
   50 naf_literal_aggregate: . naf_literal
   51                      | . aggregate_atom
   52                      | . NAF aggregate_atom
   54 classic_literal: . atom
   55                | . DASH atom
   56 atom: . identifier
   57     | . identifier PARAM_OPEN terms PARAM_CLOSE
   58     | . identifier PARAM_OPEN PARAM_CLOSE
   59 ext_atom: . AMPERSAND identifier PARAM_OPEN terms ext_semicol named_parameters ext_semicol terms PARAM_CLOSE
   60         | . AMPERSAND identifier PARAM_OPEN ext_semicol named_parameters ext_semicol terms PARAM_CLOSE
   70 builtin_or_list: . builtin_atom
   71                | . builtin_or_list OR builtin_atom
   72 builtin_atom: . term binop term
   83 term_: . ANON_VAR
   84      | . identifier PARAM_OPEN terms PARAM_CLOSE
   85      | . NUMBER DDOT NUMBER
   86      | . DASH term
   87      | . list_term
   88 term__: . identifier
   89       | . NUMBER
   90       | . PARAM_OPEN term PARAM_CLOSE
   91 term: . term_
   92     | . expr
   93 expr: . factor
   94     | . expr arithop1 factor
   95 factor: . term__
   96       | . factor arithop2 term__
  108 list_term: . SQUARE_OPEN SQUARE_CLOSE
  109          | . SQUARE_OPEN list_terms_term SQUARE_CLOSE
  117 identifier: . SYMBOLIC_CONSTANT
  118           | . STRING
  119           | . VARIABLE
  122 lower_guard_compare_aggregate: . term compareop
  124 compare_aggregate: . lower_guard_compare_aggregate aggregate
  125                  | . aggregate upper_guard_compare_aggregate
  126 lower_guard_leftward_left_aggregate: . term leftwardop
  127 leftward_left_aggregate: . lower_guard_leftward_left_aggregate aggregate
  128 left_aggregate: . leftward_left_aggregate
  129               | . rightward_left_aggregate
  130 lower_guard_rightward_left_aggregate: . term rightwardop
  131 rightward_left_aggregate: . lower_guard_rightward_left_aggregate aggregate
  134 right_aggregate: . aggregate upper_guard_leftward_right_aggregate
  135                | . aggregate upper_guard_rightward_right_aggregate
  136 aggregate_atom: . left_aggregate
  137               | . right_aggregate
  138               | . compare_aggregate
  139               | . leftward_left_aggregate upper_guard_leftward_right_aggregate
  140               | . rightward_left_aggregate upper_guard_rightward_right_aggregate
  141               | . multi_assign_aggregate
  142 multi_assign_aggregate: . multi_assign_guard multi_aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  143                       | . multi_assign_guard multi_aggregate_function CURLY_OPEN CURLY_CLOSE
  144 multi_assign_guard: . VARIABLE COMMA VARIABLE EQUAL
  145                   | . multi_assign_guard VARIABLE COMMA
  150 aggregate: . aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  151          | . aggregate_function CURLY_OPEN CURLY_CLOSE
  152          | . multi_aggregate_function CURLY_OPEN aggregate_elements CURLY_CLOSE
  153          | . multi_aggregate_function CURLY_OPEN CURLY_CLOSE
  154 multi_aggregate_function: . AGGR_MULTI aggregate_function_list SQUARE_CLOSE
  167 aggregate_function: . AGGR_COUNT
  168                   | . AGGR_MAX
  169                   | . AGGR_MIN
  170                   | . AGGR_SUM
  171                   | . AGGR_AVG

    SYMBOLIC_CONSTANT  shift, and go to state 2
    NUMBER             shift, and go to state 3
    VARIABLE           shift, and go to state 40
    STRING             shift, and go to state 5
    AGGR_COUNT         shift, and go to state 41
    AGGR_MAX           shift, and go to state 42
    AGGR_MIN           shift, and go to state 43
    AGGR_SUM           shift, and go to state 44
    AGGR_AVG           shift, and go to state 45
    AGGR_MULTI         shift, and go to state 46
    ANON_VAR           shift, and go to state 8
    PARAM_OPEN         shift, and go to state 9
    SQUARE_OPEN        shift, and go to state 10
    DASH               shift, and go to state 12
    NAF                shift, and go to state 47
    AMPERSAND          shift, and go to state 14

    body                                  go to state 48
    conjunction                           go to state 49
    naf_literal                           go to state 50
    naf_literal_aggregate                 go to state 51
    classic_literal                       go to state 52
    atom                                  go to state 53
    ext_atom                              go to state 54
    builtin_or_list                       go to state 55
    builtin_atom                          go to state 56
    term_                                 go to state 29
    term__                                go to state 30
    term                                  go to state 57
    expr                                  go to state 32
    factor                                go to state 33
    list_term                             go to state 34
    identifier                            go to state 35
    lower_guard_compare_aggregate         go to state 58
    compare_aggregate                     go to state 59
    lower_guard_leftward_left_aggregate   go to state 60
    leftward_left_aggregate               go to state 61
    left_aggregate                        go to state 62
    lower_guard_rightward_left_aggregate  go to state 63
    rightward_left_aggregate              go to state 64
    right_aggregate                       go to state 65
    aggregate_atom                        go to state 66
    multi_assign_aggregate                go to state 67
    multi_assign_guard                    go to state 68
    aggregate                             go to state 69
    multi_aggregate_function              go to state 70
    aggregate_function                    go to state 71


state 8

   83 term_: ANON_VAR .

    $default  reduce using rule 83 (term_)


state 9

   83 term_: . ANON_VAR
   84      | . identifier PARAM_OPEN terms PARAM_CLOSE
   85      | . NUMBER DDOT NUMBER
   86      | . DASH term
   87      | . list_term
   88 term__: . identifier
   89       | . NUMBER
   90       | . PARAM_OPEN term PARAM_CLOSE
   90       | PARAM_OPEN . term PARAM_CLOSE
   91 term: . term_
   92     | . expr
   93 expr: . factor
   94     | . expr arithop1 factor
   95 factor: . term__
   96       | . factor arithop2 term__
  108 list_term: . SQUARE_OPEN SQUARE_CLOSE
  109          | . SQUARE_OPEN list_terms_term SQUARE_CLOSE
  117 identifier: . SYMBOLIC_CONSTANT
  118           | . STRING
  119           | . VARIABLE

    SYMBOLIC_CONSTANT  shift, and go to state 2
    NUMBER             shift, and go to state 3
    VARIABLE           shift, and go to state 4
    STRING             shift, and go to state 5
    ANON_VAR           shift, and go to state 8
    PARAM_OPEN         shift, and go to state 9
    SQUARE_OPEN        shift, and go to state 10
    DASH               shift, and go to state 72

    term_       go to state 29
    term__      go to state 30
    term        go to state 73
    expr        go to state 32
    factor      go to state 33
    list_term   go to state 34
    identifier  go to state 74


state 10

   66 terms: . term
   67      | . terms COMMA term
   83 term_: . ANON_VAR
   84      | . identifier PARAM_OPEN terms PARAM_CLOSE
   85      | . NUMBER DDOT NUMBER
   86      | . DASH term
   87      | . list_term
   88 term__: . identifier
   89       | . NUMBER
   90       | . PARAM_OPEN term PARAM_CLOSE
   91 term: . term_
   92     | . expr
   93 expr: . factor
   94     | . expr arithop1 factor
   95 factor: . term__
   96       | . factor arithop2 term__
  108 list_term: . SQUARE_OPEN SQUARE_CLOSE
  108          | SQUARE_OPEN . SQUARE_CLOSE
  109          | . SQUARE_OPEN list_terms_term SQUARE_CLOSE
  109          | SQUARE_OPEN . list_terms_term SQUARE_CLOSE
  110 list_terms_term: . terms
  111                | . list_head_tail_term
  112 list_head_tail_term: . term VEL list_tail_term
  117 identifier: . SYMBOLIC_CONSTANT
  118           | . STRING
  119           | . VARIABLE

    SYMBOLIC_CONSTANT  shift, and go to state 2
    NUMBER             shift, and go to state 3
    VARIABLE           shift, and go to state 4
    STRING             shift, and go to state 5
    ANON_VAR           shift, and go to state 8
    PARAM_OPEN         shift, and go to state 9
    SQUARE_OPEN        shift, and go to state 10
    SQUARE_CLOSE       shift, and go to state 75
    DASH               shift, and go to state 72

    terms                go to state 76
    term_                go to state 29
    term__               go to state 30
    term                 go to state 77
    expr                 go to state 32
    factor               go to state 33
    list_term            go to state 34
    list_terms_term      go to state 78
    list_head_tail_term  go to state 79
    identifier           go to state 74


state 11

   32 choice_atom: CURLY_OPEN . choice_elements CURLY_CLOSE
   33            | CURLY_OPEN . choice_elements CURLY_CLOSE upper_guard
   36 choice_elements: . choice_elements SEMICOLON choice_element
   37                | . choice_element
   38 choice_element: . choice_element_atom
   39               | . choice_element_atom COLON choice_elements_literals
   40 choice_element_atom: . atom
   56 atom: . identifier
   57     | . identifier PARAM_OPEN terms PARAM_CLOSE
   58     | . identifier PARAM_OPEN PARAM_CLOSE
  117 identifier: . SYMBOLIC_CONSTANT
  118           | . STRING
  119           | . VARIABLE

    SYMBOLIC_CONSTANT  shift, and go to state 2
    VARIABLE           shift, and go to state 4
    STRING             shift, and go to state 5
